# Avpilot

./: .env.example  .gitignore  README.md  compose.yaml
api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
api/app/: __init__.py  celery_app.py  main.py  worker.py
api/app/api/: dependencies.py  router.py
api/app/api/routes/: auth.py  chat.py  health.py  images.py  knowledge.py  memory.py  navigation.py  observability.py  research.py
api/app/api/schemas/: auth.py  chat.py  images.py  knowledge.py  memory.py  navigation.py  observability.py  research.py
api/app/application/: __init__.py  auto_tagging.py  chat.py  chunking.py  document_parser.py  identity.py  image_processing.py  images.py  knowledge.py  knowledge_search.py  memory.py  navigation.py  observability.py  research.py  task_queue.py  web_crawler.py
api/app/application/agent/: __init__.py  langchain_runner.py  orchestrator.py  registry.py  schemas.py  tools.py
api/app/domain/: __init__.py  chunking.py  documents.py  model_gateway.py
api/app/evaluation/: __init__.py  rag.py
api/app/infrastructure/: __init__.py  health.py
api/app/shared/: __init__.py  config.py  security.py
api/app/tasks/: __init__.py  base.py  ingestion.py  maintenance.py  memory.py  research.py  runtime.py
api/migrations/: README  env.py
api/migrations/versions/: 0001_initial_baseline.py  1c54143c9885_add_deep_research_workflow.py  4b7d2a91c6ef_add_conversation_knowledge_bases.py  9c4c52fd80b1_add_reliable_task_outbox.py  bf317a333083_create_core_product_tables.py  ca42d5c817e9_add_agent_observability.py
api/tests/: test_agent.py  test_auto_tagging.py  test_bailian_gateway.py  test_chat.py  test_chunk_store.py  test_chunking.py  test_document_parser.py  test_evaluation.py  test_health.py  test_image_processing.py  test_knowledge_search.py  test_memory.py  test_research.py  test_security.py  test_task_queue.py  test_web_crawler.py
api/tests/fixtures/: knowledge_smoke.txt
api/tests/integration/: test_observability_postgres.py  test_research_postgres.py  test_task_outbox_postgres.py
docs/: architecture.md  (+10 more)
(+78 files in other folders)
