[project]
name = "avpilot-api"
version = "0.8.0"
description = "Avpilot AI knowledge and memory assistant API"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.18,<2",
    "asyncpg>=0.30,<1",
    "beautifulsoup4>=4.12,<5",
    "celery[redis]>=5.6,<6",
    "chardet>=5,<6",
    "elasticsearch[async]>=8.17,<9",
    "email-validator>=2.2,<3",
    "fastapi>=0.115,<1",
    "langchain>=1.3,<2",
    "langchain-openai>=1.1,<2",
    "markdown>=3.7,<4",
    "neo4j>=6,<7",
    "openai>=2,<3",
    "pillow>=11,<13",
    "pwdlib[argon2]>=0.3,<1",
    "pydantic-settings>=2.7,<3",
    "pyjwt>=2.10,<3",
    "pymupdf>=1.25,<2",
    "python-docx>=1.1,<2",
    "python-multipart>=0.0.20,<1",
    "redis>=5.2.1,<6",
    "sqlalchemy[asyncio]>=2,<3",
    "tiktoken>=0.12,<1",
    "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8.3,<10",
    "ruff>=0.8,<1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.uv]
package = false
